# docx_writer

./: .gitignore  .idea  docx_writer.spec  init_commands.txt  pyproject.toml
drawio/: schema.drawio
src/: docx_writer.spec  example.py
src/domain/: helper.py  parser.py  services.py  services.spec
src/templates/: change_item_template.docx  computer_equipment_handover.py  pass_item_template.docx  utilization_items_template.docx
tests/: test_change_item_contract.py  test_create_contract.py  test_pass_item_contract.py  test_utilization_item_contract.py
